Fixed scrollbar issue caused by padding

--- a/Solution/TestStuffWithIoC/static/styles.less
+++ b/Solution/TestStuffWithIoC/static/styles.less
@@ -30,7 +30,6 @@ body {
     position: relative;
     min-height: 35em;
     border: 0.1em solid darkgray;
-    padding: 0.2em;
     margin: 10em 2em 0 2em;
     background-color: white;
 }
